fixes alignments

--- a/app/assets/stylesheets/reports.sass
+++ b/app/assets/stylesheets/reports.sass
@@ -198,22 +198,28 @@ $width: 816px
         font-size: 12px
       .title_1 
         font-size: 17px
-        left: -0px
+        left: -10px
         top: 50px
+        width: 128px
+        text-align: center
       .strength_1
         font-size: 13.5px
         color: #082d5a
         left: 50px
         top: 103px
       .title_2
-        left: 33px
+        left: 17px
         top: 216px
+        width: 100px
+        text-align: center
       .strength_2
         left: 54px
         top: 174px
       .title_3
-        left: 134px
+        left: 120px
         top: 175px
+        width: 100px
+        text-align: center
       .strength_3
         top: 145px
         left: 110px
